--- a/Client/App.config
+++ b/Client/App.config
@@ -23,7 +23,7 @@
         bindingConfiguration="BasicHttpBinding_IService12" contract="ServiceReference1.IService1"
         name="BasicHttpBinding_IService12" />
       <endpoint address="http://localhost:63356/Service1.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IService1" contract="WebServiceReference.IService1"
+        bindingConfiguration="BasicHttpBinding_IService1" contract="WebServiceClient.IService1"
         name="BasicHttpBinding_IService1" />
     </client>
   </system.serviceModel>
