--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connected Services\WebServiceReference\Reference.cs">
+    <Compile Include="Connected Services\WebServiceClient\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -62,23 +62,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Connected Services\WebServiceReference\Client.WebServiceReference.Student.datasource">
+    <None Include="Connected Services\WebServiceClient\Client.WebServiceClient.Student.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\WebServiceReference\Client.WebServiceReference.Subject.datasource">
+    <None Include="Connected Services\WebServiceClient\Client.WebServiceClient.Subject.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\WebServiceReference\Client.WebServiceReference.User.datasource">
+    <None Include="Connected Services\WebServiceClient\Client.WebServiceClient.User.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\WebServiceReference\Service1.wsdl" />
-    <None Include="Connected Services\WebServiceReference\Service1.xsd">
+    <None Include="Connected Services\WebServiceClient\Service1.wsdl" />
+    <None Include="Connected Services\WebServiceClient\Service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\WebServiceReference\Service11.xsd">
+    <None Include="Connected Services\WebServiceClient\Service11.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\WebServiceReference\Service12.xsd">
+    <None Include="Connected Services\WebServiceClient\Service12.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -87,19 +87,19 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\WebServiceReference\" />
+    <WCFMetadataStorage Include="Connected Services\WebServiceClient\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\WebServiceReference\Service1.disco" />
+    <None Include="Connected Services\WebServiceClient\Service1.disco" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\WebServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\WebServiceClient\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\WebServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\WebServiceClient\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\WebServiceReference\Reference.svcmap">
+    <None Include="Connected Services\WebServiceClient\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
